# ai-agent-eval

./: .gitignore  main.py  pyproject.toml
datasets/: cumulative_golden_dataset.csv  custom_agent_faq_testset.csv  multi_tool_eval_testset.csv  ragas_testset.csv  sampled_golden_dataset.csv  trajectory_golden_dataset.csv  welfare_list_with_agent.csv  welfare_list_with_agent_tools.csv
documents_with_english_titles_markdown/: delegation_of_authority.md  employee_benefits_and_welfare_faq.md  employee_handbook_and_hr_policy.md
documents_with_english_titles_txt/: employee_benefits_and_welfare_guide.txt  expense_management_guide.txt  it_support_guide.txt  legal_and_compliance_policy.txt
notebook/: 1. RAGAS 라이브러리를 활용한 Golden Dataset 생성.ipynb
