[project]
name = "ai-agent-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain-community>=0.4.1",
    "nest-asyncio>=1.6.0",
    "py-zerox>=0.0.7",
    "python-magic>=0.4.27",
    "python-magic-bin>=0.4.14",
    "ragas>=0.4.3",
    "unstructured[md]>=0.22.26",
]
